--- a/src/app/pages/auth/components/forgot-password-dialog/forgot-password-dialog.component.html
+++ b/src/app/pages/auth/components/forgot-password-dialog/forgot-password-dialog.component.html
@@ -13,7 +13,7 @@
     Debes ingresar tu email válido
   </mat-error>
 </mat-form-field>
-<div class="action-buttons flex-col gap-05 ft-body">
+<div class="action-buttons flex-col gap-05 ft-body m-t-1">
   <button appLoadingButton [loading]="loading"
   (click)="resetPassword()"
   class="rounded-button bg-secondary txt-on-secondary">
