--- a/src/app/pages/posts/components/post-card/post-card.component.html
+++ b/src/app/pages/posts/components/post-card/post-card.component.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class="ft-label flex-center-center flex-wrap gap-05">
+  <div class="ft-label flex-center-center flex-wrap gap-05 text-center">
     <span class="rounded-tag--slim bg-academic-level txt-on-academic-level flex-grow-1">{{ post.academicLevel.name }}</span>
     <span class="rounded-tag--slim bg-axis txt-on-axis flex-grow-1">{{ post.axis.name }}</span>
     <span class="rounded-tag--slim bg-subject txt-on-subject flex-grow-1">{{ post.axis.subject.name }}</span>
