--- a/src/app/pages/posts/pages/posts-list/posts-list.component.scss
+++ b/src/app/pages/posts/pages/posts-list/posts-list.component.scss
@@ -14,6 +14,10 @@ main {
         min-height: calc(100dvh - 72px);
     }
 
+    .filters-stats {
+        max-width: 350px;
+    }
+
     .posts-grid {
         grid-template-columns: 1fr 1fr;
 
