--- a/src/assets/styles/material/_material-theme.scss
+++ b/src/assets/styles/material/_material-theme.scss
@@ -11,8 +11,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$planishare-primary: mat.define-palette(mat.$purple-palette, 800);
-$planishare-accent: mat.define-palette(mat.$green-palette, 900);
+$planishare-primary: mat.define-palette(mat.$green-palette, 900);
+$planishare-accent: mat.define-palette(mat.$purple-palette, 800);
 // $planishare-primary: mat.define-palette(mat.$green-palette, 900);
 // $planishare-accent: mat.define-palette(mat.$purple-palette, 800);
 
