--- a/src/app/pages/posts/pages/post-form/post-form.component.html
+++ b/src/app/pages/posts/pages/post-form/post-form.component.html
@@ -1,31 +1,10 @@
-<main class="container">
-  <div class="rounded-card w-100">
-    <h1 class="fs-large m-b-05">
+<main class="container flex-col lg-flex-row gap-05 bg-background p-y-1">
+  <div class="card w-100">
+    <h1 class="ft-title">
       {{ !editForm ? 'Crear publicación' : 'Editar publicación' }}
     </h1>
 
-    <!-- Form shimmer -->
-    <div class="flex-column gap-1 w-100" *ngIf="loadingPost">
-      <div class="shimmer-input-form grow-1"></div>
-      <div class="shimmer-input-form grow-1">
-        <mat-icon class="shimmer-text-color">expand_more</mat-icon>
-      </div>
-      <div class="shimmer-input-form grow-1">
-        <mat-icon class="shimmer-text-color">expand_more</mat-icon>
-      </div>
-      <div>
-        <div class="shimmer-input-form grow-1 m-0"></div>
-        <div class="shimmer-input-form grow-1"></div>
-      </div>
-      <div class="flex-end-center">
-        <button type="submit" mat-raised-button color="primary" disabled="true">
-          <span class="m-r-05">Guardar</span>
-          <mat-icon class="fs-medium">save</mat-icon>
-        </button>
-      </div>
-    </div>
-
-    <form [formGroup]="form" (ngSubmit)="save($event)" *ngIf="!loadingPost">
+    <form class="m-t-1 ft-body" [formGroup]="form" (ngSubmit)="save($event)" *ngIf="!loadingPost">
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Título</mat-label>
         <input matInput placeholder="Título" formControlName="title">
@@ -69,7 +48,7 @@
         <textarea matInput formControlName="description" cdkTextareaAutosize cdkAutosizeMinRows="3"
           cdkAutosizeMaxRows="20">
               </textarea>
-        <div class="flex-end-center">
+        <div>
           <mat-hint *ngIf="this.form.controls.description.valid">{{ this.form.controls.description.value?.length ?? 0
             }}/1000
           </mat-hint>
@@ -78,42 +57,63 @@
         </div>
       </mat-form-field>
 
-      <div class="flex-end-center">
-        <button type="submit" mat-raised-button color="primary" [disabled]="loadingPost" *ngIf="!loading && !editForm" @inOutRight [@.disabled]="!loading">
-          <span class="m-r-05">Publicar</span>
-          <mat-icon class="fs-medium">send</mat-icon>
+      <div class="flex-end-center ft-body">
+        <button type="submit" matRipple appLoadingButton [loading]="loading" class="rounded-button bg-primary txt-on-primary" [disabled]="loadingPost">
+          <ng-container *ngIf="!loading && !editForm">
+            <span>Publicar</span>
+            <i-tabler name="send"></i-tabler>
+          </ng-container>
+          <ng-container *ngIf="!loading && editForm">
+            <span>Guardar</span>
+            <i-tabler name="device-floppy"></i-tabler>
+          </ng-container>
         </button>
-        <button type="submit" mat-raised-button color="primary" [disabled]="loadingPost" *ngIf="!loading && editForm" @inOutRight [@.disabled]="!loading">
-          <span class="m-r-05">Guardar</span>
-          <mat-icon class="fs-medium">save</mat-icon>
-        </button>
-        <div class="shapes-loader" *ngIf="loading" @inOutLeft></div>
       </div>
     </form>
+
+    <!-- Form shimmer -->
+    <div *ngIf="loadingPost">
+      <div class="shimmer-input-form"></div>
+      <div class="shimmer-input-form"></div>
+      <div class="shimmer-input-form"></div>
+      <div class="shimmer-input-form"></div>
+      <div class="flex-end-center">
+        <button class="rounded-button bg-primary txt-on-primary" disabled>
+          <ng-container *ngIf="!editForm">
+            <span>Publicar</span>
+            <i-tabler name="send"></i-tabler>
+          </ng-container>
+          <ng-container *ngIf="editForm">
+            <span>Guardar</span>
+            <i-tabler name="device-floppy"></i-tabler>
+          </ng-container>
+        </button>
+      </div>
+    </div>
   </div>
 
   <!-- Upload File -->
-  <div class="rounded-card grow-1 right-card min-w-0">
-    <h2 class="fs-medium" *ngIf="editForm">Archivos</h2>
+  <div class="card lg-max-w-50 w-100">
+    <h2 class="ft-medium" *ngIf="editForm">Archivos</h2>
 
-    <div class="upload-area flex-column flex-center-center gap-1" appDragAndDropFile
+    <div class="upload-area text-center" appDragAndDropFile
       (fileDropped)="onFileDroped($event)"
       [ngClass]="{'upload-area_invalid': this.form.controls.files.invalid && this.form.controls.files.touched}"
       *ngIf="!editForm">
-      <h2 class="text-blue-dark"
-        [ngClass]="{'text-red': this.form.controls.files.invalid && this.form.controls.files.touched}">Arrastra los
+      <h2 class="ft-medium f-weight-500 txt-secondary"
+        [ngClass]="{'txt-red': this.form.controls.files.invalid && this.form.controls.files.touched}">Arrastra los
         archivos aquí</h2>
-      <div>
-        <p class="fw-500 m-b-05">Los archivos con estos formatos se podrán ver sin descargar</p>
-        <div class="flex-center-center gap-05">
-          <div class="file-box bg-red text-white fw-700">.pdf</div>
-          <div class="file-box bg-blue text-white fw-700">.doc</div>
-          <div class="file-box bg-green text-white fw-700">.xls</div>
-          <div class="file-box bg-orange text-white fw-700">.ppt</div>
+      <div class="ft-body">
+        <p>Los archivos con estos formatos se podrán ver sin descargar</p>
+        <div class="flex-center-center gap-05 flex-wrap m-t-05">
+          <div class="rounded-tag--slim bg-red txt-on-red">.pdf</div>
+          <div class="rounded-tag--slim bg-blue txt-on-blue">.doc</div>
+          <div class="rounded-tag--slim bg-green txt-on-green">.xls</div>
+          <div class="rounded-tag--slim bg-orange txt-on-orange">.ppt</div>
         </div>
       </div>
-      <button class="rounded-button-slim bg-blue text-white w-fit" (click)="fileInput.click()" matRipple>
-        <mat-icon>upload_file</mat-icon>
+      <button (click)="fileInput.click()" matRipple class="rounded-button bg-secondary txt-on-secondary m-x-auto m-t-1">
+        <!-- <mat-icon>upload_file</mat-icon> -->
         <span>Buscar en el dispositivo</span>
       </button>
       <input type="file" class="sr-only" (change)="onFileSelected($event)" multiple #fileInput>
@@ -122,39 +122,56 @@
       </mat-error>
     </div>
 
-    <div *ngFor="let file of fileList; index as i" @inOutRight>
-      <span class="block m-t-05" *ngIf="i === 0">Archivo principal</span>
-      <span class="block m-t-1" *ngIf="i === 1">Material complementario</span>
-      <div class="flex-space_between-center gap-05">
-        <div class="flex-center-center gap-05 min-w-0">
-          <span class="small-border-tag{{ '-' + file.tagColor }} min-w-fit">{{ file.ext }}</span>
-          <span class="fw-500 text-ellipsis" [attr.aria-label]="file.fullName">{{ file.fullName }}</span>
-        </div>
-        <div *ngIf="file.uploadCompleted" class="flex-center-center">
-          <a mat-icon-button [href]="file.url" download [target]="file.ngxDocViewer === 'office' ? '_self' : '_blank'"
-            aria-label="Descargar">
-            <mat-icon class="text-blue-dark">file_download</mat-icon>
-          </a>
-          <button *ngIf="!editForm" (click)="removeFile(i)" mat-icon-button aria-label="Remover">
-            <mat-icon class="text-blue-dark">delete</mat-icon>
-          </button>
-        </div>
-        <div class="p-05" *ngIf="!file.uploadCompleted" aria-label="Cargando">
-          <mat-spinner diameter="24"></mat-spinner>
+    <div class="flex-col gap-075 m-t-1">
+      <div *ngFor="let file of fileList; index as i" @inOutRight>
+        <span *ngIf="i === 0" class="ft-label f-weight-500">Archivo principal</span>
+        <span *ngIf="i === 1" class="m-t-1 ft-label f-weight-500">Material complementario</span>
+        <div class="flex-between-center gap-1">
+          <div class="flex-start-center gap-05 min-w-0">
+            <span class="rounded-border-tag--slim ft-label txt-{{file.accentColor}}">{{ file.ext }}</span>
+            <span class="text-ellipsis" [attr.aria-label]="file.fullName">{{ file.fullName }}</span>
+          </div>
+          <div *ngIf="file.uploadCompleted" class="flex-start-center gap-05">
+            <a mat-icon-button [href]="file.url" download [target]="file.ngxDocViewer === 'office' ? '_self' : '_blank'"
+              aria-label="Descargar">
+              <i-tabler name="download" class="txt-blue"></i-tabler>
+            </a>
+            <button *ngIf="!editForm" (click)="removeFile(i)" mat-icon-button aria-label="Remover">
+              <i-tabler name="trash" class="txt-red"></i-tabler>
+            </button>
+          </div>
+          <div *ngIf="!file.uploadCompleted" aria-label="Cargando">
+            <mat-spinner diameter="24"></mat-spinner>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- File list shimmer -->
-    <div *ngIf="loadingPost">
-      <div class="shimmer-text-regular w-70 m-t-05"></div>
-      <div class="flex-center-center gap-025 w-100">
-        <div class="shimmer-text-large grow-1"></div>
-        <mat-icon class="shimmer-text-color">file_download</mat-icon>
+    <div *ngIf="loadingPost" class="flex-col gap-1 w-100">
+      <div class="shimmer-ft-label w-40"></div>
+      <div class="flex-between-center gap-1">
+        <div class="flex-center-center gap-05 w-100">
+          <div class="shimmer-ft-title w-10"></div>
+          <div class="shimmer-ft-body w-100"></div>
+        </div>
+        <button mat-icon-button disabled><i-tabler name="download"></i-tabler></button>
       </div>
-      <div class="flex-center-center gap-025 w-100">
-        <div class="shimmer-text-large grow-1"></div>
-        <mat-icon class="shimmer-text-color">file_download</mat-icon>
+
+      <div class="shimmer-ft-label w-40"></div>
+      <div class="flex-between-center gap-1">
+        <div class="flex-center-center gap-05 w-100">
+          <div class="shimmer-ft-title w-10"></div>
+          <div class="shimmer-ft-body w-100"></div>
+        </div>
+        <button mat-icon-button disabled><i-tabler name="download"></i-tabler></button>
+      </div>
+      <div class="flex-between-center gap-1">
+        <div class="flex-center-center gap-05 w-100">
+          <div class="shimmer-ft-title w-10"></div>
+          <div class="shimmer-ft-body w-100"></div>
+        </div>
+        <button mat-icon-button disabled><i-tabler name="download"></i-tabler></button>
       </div>
     </div>
   </div>
