--- a/src/assets/styles/components/_shimmers.scss
+++ b/src/assets/styles/components/_shimmers.scss
@@ -34,6 +34,12 @@
     }
 }
 
+.shimmer-input-form {
+    height: calc(var(--body-font-size) * 3);
+    border-radius: 10px;
+    margin-block: var(--body-font-size);
+}
+
 .shimmer-ft-title {
     height: var(--title-font-size);
     border-radius: 20px;
