--- a/src/app/pages/posts/pages/posts-list/posts-list.component.html
+++ b/src/app/pages/posts/pages/posts-list/posts-list.component.html
@@ -30,6 +30,8 @@
                         [post]="post"
                         [ownPost]="post.isOwner"
                         [loading]="loading"
+                        (delete)="deletePost($event)"
+                        (report)="reportPost($event)"
                     ></app-post-card>
                 </li>
             </ng-container>
