--- a/src/app/pages/posts/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/pages/posts/components/delete-dialog/delete-dialog.component.html
@@ -1,18 +1,17 @@
-<h1 class="fs-large">Eliminar publicación 🗑️</h1>
+<h1 class="ft-title">Eliminar publicación 🗑️</h1>
 <div mat-dialog-content>
-  <p class="m-y-1">
+  <p class="m-y-1 ft-body">
     ¿Seguro que quieres eliminar <span class="fw-700">{{ post!.title }}</span>?
   </p>
-  <p>No podrás recuperar esta publicación.</p>
+  <p class="ft-body">No podrás recuperar esta publicación.</p>
 </div>
 <div mat-dialog-actions class="flex-end-center gap-025">
-  <button mat-raised-button color="warn" (click)="deletePost()" *ngIf="!loading" @inOutRight [@.disabled]="!loading">
-    <span class="m-r-05">Eliminar</span>
-    <!-- <mat-icon class="fs-medium">delete</mat-icon> -->
+  <button class="rounded-button bg-orange txt-on-orange" appLoadingButton [loading]="loading" (click)="deletePost()">
+    Eliminar
+    <i-tabler name="trash"></i-tabler>
   </button>
-  <div class="shapes-loader" *ngIf="loading" @inOutLeft></div>
 
-  <button mat-flat-button mat-dialog-close>
+  <button class="rounded-button bg-red txt-on-red" type="button" mat-dialog-close>
     Cancelar
   </button>
 </div>
