--- a/src/app/pages/user/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/user/pages/edit-profile/edit-profile.component.html
@@ -1,50 +1,24 @@
-<main class="container-row m-b-2">
-  <div class="rounded-card w-100">
-    <h1 class="fs-large m-b-05">Editar perfil</h1>
+<main class="container flex-col lg-flex-row gap-05 bg-background p-y-1">
+  <div class="card w-100">
+    <h1 class="ft-title">Editar perfil</h1>
 
-    <!-- Form shimmer -->
-    <div class="flex-column gap-1 w-100" *ngIf="loadingUser">
-      <div class="shimmer-input-form grow-1"></div>
-      <div class="flex-space_between-center flex-wrap gap-1-lg">
-        <div class="shimmer-input-form grow-1"></div>
-        <div class="shimmer-input-form grow-1"></div>
-      </div>
-      <div class="shimmer-input-form grow-1">
-        <mat-icon class="shimmer-text-color">expand_more</mat-icon>
-      </div>
-      <div class="shimmer-input-form grow-1">
-        <mat-icon class="shimmer-text-color">expand_more</mat-icon>
-      </div>
-      <div class="shimmer-input-form grow-1">
-        <mat-icon class="shimmer-text-color">expand_more</mat-icon>
-      </div>
-      <div class="flex-end-center">
-        <button mat-raised-button color="primary" disabled="true">
-          <span>Guardado</span>
-          <mat-icon class="fs-medium">check_circle</mat-icon>
-        </button>
-      </div>
-    </div>
-
-    <form [formGroup]="form" (ngSubmit)="save($event)" *ngIf="!loadingUser">
+    <form class="m-t-1 ft-body" [formGroup]="form" (ngSubmit)="save($event)" *ngIf="!loadingUser">
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Email</mat-label>
         <input matInput placeholder="Email" [value]="form.controls.email.value" disabled="true">
       </mat-form-field>
 
-      <div class="flex-space_between-center flex-wrap gap-1-lg">
-        <mat-form-field appearance="outline" class="grow-1">
-          <mat-label>Nombre</mat-label>
-          <input matInput placeholder="Nombre" formControlName="firstName">
-          <mat-error *ngIf="!!this.form.controls.firstName.errors">Debe tener al menos 2 carácteres de largo</mat-error>
-        </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Nombre</mat-label>
+        <input matInput placeholder="Nombre" formControlName="firstName">
+        <mat-error *ngIf="!!this.form.controls.firstName.errors">Debe tener al menos 2 carácteres de largo</mat-error>
+      </mat-form-field>
 
-        <mat-form-field appearance="outline" class="grow-1">
-          <mat-label>Apellido</mat-label>
-          <input matInput placeholder="Apellido" formControlName="lastName">
-          <mat-error *ngIf="!!this.form.controls.lastName.errors">Debe tener al menos 2 carácteres de largo</mat-error>
-        </mat-form-field>
-      </div>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Apellido</mat-label>
+        <input matInput placeholder="Apellido" formControlName="lastName">
+        <mat-error *ngIf="!!this.form.controls.lastName.errors">Debe tener al menos 2 carácteres de largo</mat-error>
+      </mat-form-field>
 
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Ocupación</mat-label>
@@ -96,48 +70,44 @@
         <mat-hint>Pronto agregaremos más instituciones.</mat-hint>
       </mat-form-field>
 
-      <div class="flex-end-center m-t-1">
-        <button type="submit" mat-raised-button color="primary" *ngIf="!saving && !saved" @inOutRight [@.disabled]="!saving">
-          <span class="m-r-05">Guardar</span>
-          <mat-icon class="fs-medium">save</mat-icon>
+      <div class="flex-end-center ft-body m-t-1">
+        <button *ngIf="!saved" type="submit" matRipple appLoadingButton [loading]="saving" class="rounded-button bg-primary txt-on-primary">
+          <span>Guardar</span>
+          <i-tabler name="send"></i-tabler>
         </button>
-        <button type="submit" mat-raised-button color="primary" *ngIf="!saving && saved" @inOutRight [@.disabled]="!saving">
-          <span class="m-r-05">Guardado</span>
-          <mat-icon class="fs-medium">check_circle</mat-icon>
+        <button *ngIf="saved" matRipple class="rounded-button" disabled>
+          <span>Guardado</span>
+          <i-tabler name="device-floppy"></i-tabler>
         </button>
-        <div class="shapes-loader" *ngIf="saving" @inOutLeft></div>
       </div>
     </form>
   </div>
 
-  <div class="w-100 flex-column gap-05">
-    <div class="rounded-card">
-      <h2>Ayúdanos contandonos más sobre tí :)</h2>
-      <p class="fw-600">¿Para que se usa esta información?</p>
-      <ul>
-        <li>Esta información será visible para todos los usuarios del sitio, incluso para usuarios no registrados.</li>
-        <li>
-          Además, será utilizada exclusivamente por Planishare para realizar análisis o nuevas carácteristicas para la plataforma.
-        </li>
-      </ul>
-    </div>
-    <div class="rounded-card" *ngIf="userVerified">
-      <h2>Cambiar contraseña</h2>
+  <div class="card w-100 ft-body h-fit-content">
+    <h2 class="ft-medium">Ayúdanos contandonos más sobre tí :)</h2>
+    <p>¿Para que se usa esta información?</p>
+    <ul>
+      <li>Esta información será visible para todos los usuarios del sitio, incluso para usuarios no registrados.</li>
+      <li>
+        Además, será utilizada exclusivamente por Planishare para realizar análisis o nuevas carácteristicas para la plataforma.
+      </li>
+    </ul>
+
+    <div *ngIf="userVerified" class="m-t-1">
+      <h2 class="ft-medium">Cambiar contraseña</h2>
       <p>{{ changePasswordMsg }}</p>
       <div class="flex-end-center m-t-1">
-        <button mat-raised-button color="primary" (click)="resetPassword()">
+        <button (click)="resetPassword()" class="rounded-button bg-blue txt-on-blue">
           <span class="m-r-05">Cambiar contraseña</span>
-          <mat-icon class="fs-medium">lock_reset</mat-icon>
         </button>
       </div>
     </div>
-    <div class="rounded-card" *ngIf="!userVerified">
-      <h2>Verificar cuenta</h2>
+    <div *ngIf="!userVerified" class="m-t-1">
+      <h2 class="ft-medium">Verificar cuenta</h2>
       <p>Revisa tu email y valida tu cuenta para poder crear publicaciones y dar Me gusta 💙</p>
       <div class="flex-end-center m-t-1">
-        <button mat-raised-button color="primary" (click)="resendEmail()">
+        <button (click)="resendEmail()" class="rounded-button bg-blue txt-on-blue">
           Reenviar correo de verificación
-          <mat-icon class="fs-medium">send</mat-icon>
         </button>
       </div>
     </div>
