--- a/src/app/pages/posts/components/posts-filters/posts-filters.component.html
+++ b/src/app/pages/posts/components/posts-filters/posts-filters.component.html
@@ -62,12 +62,12 @@
     </app-rounded-select>
   </div>
 
-  <div class="flex-col gap-05 m-t-3 lg-m-t-1">
-    <button matRipple class="w-100 rounded-button bg-on-primary txt-primary ft-body" (click)="applyFilters()">
+  <div class="flex-col gap-05 m-t-3 lg-m-t-1" *ngIf="form.touched || hasFilters">
+    <button *ngIf="form.touched" matRipple class="w-100 rounded-button bg-on-primary txt-primary ft-body" (click)="applyFilters()" @inOutY>
       <span>Aplicar filtros</span>
       <i-tabler name="filter-check" class="small-icon"></i-tabler>
     </button>
-    <button matRipple class="w-100 rounded-button bg-red txt-on-red ft-body" *ngIf="hasFilters" (click)="removeFilters()">
+    <button matRipple class="w-100 rounded-button bg-red txt-on-red ft-body" *ngIf="hasFilters" (click)="removeFilters()" @inOutY>
       <span>Remover filtros</span>
       <i-tabler name="trash" class="small-icon"></i-tabler>
     </button>
