--- a/src/app/pages/posts/pages/post-detail/post-detail.component.html
+++ b/src/app/pages/posts/pages/post-detail/post-detail.component.html
@@ -49,10 +49,11 @@
               <span class="text-ellipsis">{{ post.mainFile.name }}</span>
               <span>{{ post.mainFile.ext }}</span>
           </button>
-          <a mat-icon-button [href]="post.mainFile.url" download
+          <!-- TODO: Fix download button -->
+          <!-- <a mat-icon-button [href]="post.mainFile.url" download
             [target]="post.mainFile.ngxDocViewer === 'office' ? '_self' : '_blank'" aria-label="Descargar">
             <i-tabler name="download" class="txt-on-background"></i-tabler>
-          </a>
+          </a> -->
         </div>
   
         <ng-container *ngFor="let file of post.supportingMaterial">
@@ -67,10 +68,11 @@
                 <span class="text-ellipsis">{{ file.name }}</span>
                 <span>{{ file.ext }}</span>
             </button>
-            <a mat-icon-button [href]="file.url" download
+            <!-- TODO: Fix download button -->
+            <!-- <a mat-icon-button [href]="file.url" download
               [target]="file.ngxDocViewer === 'office' ? '_self' : '_blank'" aria-label="Descargar">
               <i-tabler name="download" class="txt-on-background"></i-tabler>
-            </a>
+            </a> -->
           </div>
         </ng-container>
       </div>
@@ -106,19 +108,33 @@
 
   <!-- File viewer -->
   <div class="w-100 card p-05 viewer-contianer" #filePreview>
-    <div class="doc-viewer shimmer-loading" *ngIf="(!!currentFile?.ngxDocViewer && !!post) || !post">
-      <ngx-doc-viewer *ngIf="!!currentFile && !!currentViewer" [url]="currentFile.url" [viewer]="currentViewer">
+    <!-- Shimmer -->
+    <div class="shimmer-loading h-100" *ngIf="!currentFile"></div>
+
+    <!-- Native view -->
+    <ng-container *ngIf="currentFile?.viewer?.type === fileViewType.NATIVE_VIEWER">
+      <div class="flex-center-center h-100" *ngIf="currentFile?.viewer?.viewer === 'img'">
+        <img class="w-100 max-w-600px" [src]="currentFile?.url" [alt]="currentFile?.name">
+      </div>
+    </ng-container>
+
+    <!-- NGX Doc viewer -->
+    <div class="doc-viewer shimmer-loading" *ngIf="currentFile?.viewer?.type === fileViewType.NGX_DOC_VIEWER">
+      <ngx-doc-viewer [url]="currentFile!.url" [viewer]="$any(currentFile!.viewer!.viewer)">
       </ngx-doc-viewer>
     </div>
-    <div *ngIf="!currentFile?.ngxDocViewer && !!post" class="flex-col flex-center-center gap-05 text-center">
+
+    <!-- Not viewer available -->
+    <div *ngIf="post && currentFile && !currentFile.viewer" class="flex-col flex-center-center gap-05 text-center">
       <img class="no-preview-image" src="/assets/images/construction-cuate.png" alt="Vista previa no disponible">
       <p class="ft-title txt-primary">Vista previa no disponible 😢</p>
       <div class="flex-center-center ft-body txt-secondary">
         <p>Pero puedes descargar el archivo</p>
-        <a mat-icon-button [href]="currentFile?.url" [download]="currentFile?.fullName"
+        <!-- TODO: Fix download button -->
+        <!-- <a mat-icon-button [href]="currentFile.url" [download]="currentFile.fullName"
           [target]="currentFile?.ngxDocViewer === 'office' ? '_self' : '_blank'" aria-label="Descargar">
           <i-tabler name="download" class="txt-on-background"></i-tabler>
-        </a>
+        </a> -->
       </div>
       <p class="ft-label">Estamos trabajando para que puedas previsualizar más archivos en Planishare 👀</p>
     </div>
