--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -29,19 +29,8 @@
         <input matInput placeholder="Contraseña" formControlName="password"
           [type]="showPassword? 'text' : 'password'">
           <button matSuffix type="button" class="button-style-none" (click)="showPassword = !showPassword">
-            <svg *ngIf="showPassword" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye-off" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M10.585 10.587a2 2 0 0 0 2.829 2.828"></path>
-              <path d="M16.681 16.673a8.717 8.717 0 0 1 -4.681 1.327c-3.6 0 -6.6 -2 -9 -6c1.272 -2.12 2.712 -3.678 4.32 -4.674m2.86 -1.146a9.055 9.055 0 0 1 1.82 -.18c3.6 0 6.6 2 9 6c-.666 1.11 -1.379 2.067 -2.138 2.87"></path>
-              <path d="M3 3l18 18"></path>
-           </svg>
-            <svg *ngIf="!showPassword" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye"
-              width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-              stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
-              <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6"></path>
-            </svg>
+            <i-tabler *ngIf="showPassword" name="eye-off"></i-tabler>
+            <i-tabler *ngIf="!showPassword" name="eye"></i-tabler>
           </button>
         <mat-error *ngIf="form.controls.password.invalid && form.controls.password.errors!['required']">
           Debes ingresar una contraseña
@@ -59,19 +48,8 @@
         <input matInput placeholder="Repetir contraseña" formControlName="passwordConfirmation"
           [type]="showPasswordConfirmation? 'text' : 'password'">
           <button matSuffix type="button" class="button-style-none" (click)="showPasswordConfirmation = !showPasswordConfirmation">
-            <svg *ngIf="showPasswordConfirmation" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye-off" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M10.585 10.587a2 2 0 0 0 2.829 2.828"></path>
-              <path d="M16.681 16.673a8.717 8.717 0 0 1 -4.681 1.327c-3.6 0 -6.6 -2 -9 -6c1.272 -2.12 2.712 -3.678 4.32 -4.674m2.86 -1.146a9.055 9.055 0 0 1 1.82 -.18c3.6 0 6.6 2 9 6c-.666 1.11 -1.379 2.067 -2.138 2.87"></path>
-              <path d="M3 3l18 18"></path>
-           </svg>
-            <svg *ngIf="!showPasswordConfirmation" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye"
-              width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-              stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
-              <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6"></path>
-            </svg>
+            <i-tabler *ngIf="showPasswordConfirmation" name="eye-off"></i-tabler>
+            <i-tabler *ngIf="!showPasswordConfirmation" name="eye"></i-tabler>
           </button>
         <mat-error *ngIf="form.controls.passwordConfirmation.invalid && form.controls.passwordConfirmation.errors!['required']">
           Debes repetir la contraseña
