feat(homepage): Fix footer

--- a/src/app/pages/homepage/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage/homepage.component.html
@@ -11,17 +11,23 @@
     <img class="banner__image" src="../../../../assets/images/web-search-cuate.png" alt="Ilustracion de busqueda">
     <div class="banner__text flex-col gap-1">
         <h2 class="ft-headline">Descarga gratis los recursos subidos por la comunidad o visualizalos sin descargarlos</h2>
-        <div class="flex-center-center gap-05 flex-wrap">
-            <span class="rounded-button bg-green txt-on-green">Excel</span>
-            <span class="rounded-button bg-blue txt-on-blue">Word</span>
-            <span class="rounded-button bg-red txt-on-red">PDF</span>
-            <span class="rounded-button bg-orange txt-on-orange">Power points</span>
-            <span class="rounded-button bg-purple txt-on-purple">Imágenes</span>
+        <div class="flex-center-center gap-05 flex-wrap ft-body">
+            <span class="rounded-tag bg-green txt-on-green">Excel</span>
+            <span class="rounded-tag bg-blue txt-on-blue">Word</span>
+            <span class="rounded-tag bg-red txt-on-red">PDF</span>
+            <span class="rounded-tag bg-orange txt-on-orange">Power points</span>
+            <span class="rounded-tag bg-purple txt-on-purple">Imágenes</span>
         </div>
     </div>
 </section>
 
-<footer class="container bg-primary txt-on-primary">
-    <p><a class="a-style-none" href=""><small>Creador: Nicolás Bustamante</small></a></p>
-    <p><a class="a-style-none" href="https://storyset.com/online"><small>Ilustraciones: Online illustrations by Storyset</small></a></p>
+<footer class="container flex-center-center lg-flex-between-center gap-1 flex-wrap bg-secondary txt-on-secondary p-y-1 ft-body">
+    <div class="flex-center-center gap-05">
+        <i-tabler name="brand-linkedin"></i-tabler>
+        <a class="a-style-none" href="https://www.linkedin.com/in/nicolas-bustamante-estay" target="_blank">Creado por: Nicolás Bustamante</a>
+    </div>
+    <div class="flex-center-center gap-05">
+        <i-tabler name="palette"></i-tabler>
+        <a class="a-style-none" href="https://storyset.com/online" target="_blank">Ilustraciones: Storyset</a>
+    </div>
 </footer>
