feat(post-list): Add empty state

--- a/src/app/pages/posts/pages/post-detail/post-detail.component.html
+++ b/src/app/pages/posts/pages/post-detail/post-detail.component.html
@@ -124,7 +124,7 @@
 
     <!-- Not viewer available -->
     <div *ngIf="post && currentFile && !currentFile.viewer" class="flex-col flex-center-center gap-05 text-center">
-      <img class="no-preview-image w-100" src="/assets/images/construction-cuate.png" alt="Vista previa no disponible">
+      <img class="max-w-350px w-100" src="/assets/images/construction-cuate.png" alt="Vista previa no disponible">
       <p class="ft-title txt-primary">Vista previa no disponible 😢</p>
       <div class="flex-center-center ft-body txt-secondary">
         <p>Pero puedes descargar el archivo</p>
