--- a/src/app/pages/homepage/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage/homepage.component.html
@@ -1,16 +1,18 @@
 <section
     class="banner container bg-primary txt-on-primary flex-col flex-center-center gap-1 p-y-3">
     <div class="banner__text flex-col gap-1">
-        <h1 class="ft-display">Busca y comparte planificaciones de enseñanza media</h1>
+        <h1 class="ft-display">Busca y comparte recursos educativos de enseñanza básica</h1>
+        <p class="ft-label">✨ Próximamente también de enseñanza media.</p>
         <a routerLink="/posts" class="banner__action-button rounded-button bg-on-primary txt-primary ft-title">Ver planificaciones</a>
     </div>
     <img class="banner__image" src="../../../../assets/images/college-project-cuate.png" alt="Ilustracion de trabajo en equipo">
 </section>
 
-<section class="banner container bg-on-primary txt-primary flex-col flex-center-center gap-1 p-y-3">
-    <img class="banner__image" src="../../../../assets/images/web-search-cuate.png" alt="Ilustracion de busqueda">
+<section class="banner container bg-on-primary txt-primary flex-col flex-center-center gap-3 p-y-3">
+    <img class="demo-gif" src="../../../../assets/images/planishare-post-demo.gif" alt="Gif con un post de ejemplo">
     <div class="banner__text flex-col gap-1">
-        <h2 class="ft-headline">Descarga gratis los recursos subidos por la comunidad o visualizalos sin descargarlos</h2>
+        <h2 class="ft-headline">Descarga los recursos subidos por la comunidad educativa o visualizalos dentro de Planishare</h2>
+        <p class="ft-body">Podrás ver los archivos sin necesidad de descargarlos ¡Incluso archivos de Office!</p>
         <div class="flex-center-center gap-05 flex-wrap ft-body">
             <span class="rounded-tag bg-green txt-on-green">Excel</span>
             <span class="rounded-tag bg-blue txt-on-blue">Word</span>
@@ -19,6 +21,15 @@
             <span class="rounded-tag bg-purple txt-on-purple">Imágenes</span>
         </div>
     </div>
+</section>
+
+<section class="banner container bg-primary txt-on-primary flex-col flex-center-center gap-1 p-y-3">
+    <div class="banner__text flex-col gap-1">
+        <h2 class="ft-headline">Comparte y apoya a la comunidad</h2>
+        <p class="ft-body">Puedes subir planificaciones, guías, presentaciones o lo que consideres que pueda ser de utilidad para profesores y estudiantes de pedagogía en Chile.</p>
+        <p class="ft-body">El contenido de Planishare siempre será gratuito 🙌.</p>
+    </div>
+    <img class="banner__image scale-x-inverse" src="../../../../assets/images/web-search-cuate.png" alt="Ilustracion de busqueda">
 </section>
 
 <footer class="container flex-center-center lg-flex-between-center gap-1 flex-wrap bg-secondary txt-on-secondary p-y-1 ft-body">
